# mole

./: .gitignore  .pre-commit-config.yaml  DangerousFunctions.md  LICENSE  Notes.md  README.md  __init__.py  plugin.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
conf/: .gitignore  001-settings.yml  002-libc.yml  003-libgio.yml  003-libgio.yml.bak  003-uhttpd.yml  004-libapr.yml  004-libapr.yml.bak  005-c200.yml  005-libcgi_header.yml  006-uhttpd.yml
development/: debug.py  generate-release-notes.sh  reload.py  update_dependencies.py  update_description.py
docs/: 01-Installation.md  02-Usage.md  03-Customization.md  03-Extension.md  04-Pointers.md  index.html
mole/: main.py  plugin.py  test.py
mole/ai/: tools.py
mole/analysis/: lib.py  libapr.py  libc.py  libgio.py  libgio_2_0.py  slice.py  thread.py
mole/cli/: main.py
mole/common/: binja.py  help.py  helper.py  instruction.py  log.py  parse.py  task.py  worker.py
mole/conf/: 001-settings.json  001-settings.yml  002-libc.yml  002-manual.yml  003-libc.json  003-libc.yml  taint_model_schema.json
mole/controllers/: ai.py  config.py  graph.py  path.py  paths.py  sidebar.py
mole/core/: ai.py  call.py  controller.py  data.py  graph.py  grouping.py  model.py  pointers.py  slice.py  slicer.py  view.py
mole/data/: ai.py  config.py  path.py
mole/grouping/: __init__.py  call_graph.py  callgraph.py  source_sink.py
mole/model/: back_slicer.py  helper.py  lib.py  libapr.py  libc.py  libgio.py  slice.py
mole/models/: __init__.py  ai.py  config.py  path.py  paths.py
mole/services/: ai.py  config.py  graph.py  path.py  slicer.py
mole/ui/: config.py  graph.py  utils.py  view.py
mole/views/: ai.py  config.py  graph.py  path.py  path_tree.py  paths_table.py  paths_tree.py  sidebar.py  utils.py
test/: Makefile  __init__.py  test_data.py  test_instructions.py  test_libc.py  test_logic_expr_parsing.py  test_pointers.py  test_slicing.py  utils.py
test/src/: function_calling-04.c  function_calling-06.c  function_calling-09.c  function_calling-10.c  function_calling-11.c  function_calling-12.c  function_calling-14.c  gets-01.c  gets-02.c  load-01.c  load-03.c  load-04.c  load-05.c  memcpy-01.c  memcpy-04.c  memcpy-06.c  memcpy-08.c  memcpy-09.c  memcpy-10.c  name_mangling-01.cpp  name_mangling-02.cpp  name_mangling-03.cpp  pointer_analysis-01.c  pointer_analysis-02.c  pointer_analysis-03.c  pointer_analysis-04.c  pointer_analysis-05.c  pointer_analysis-06.c  pointer_analysis-11.c  pointer_analysis-12.c  pointer_analysis-13.c  pointer_analysis-14.c  recv-02.c  simple_http_server-04.c  source_in_callee-01.c  source_in_callee-02.c  source_in_callee-03.c  source_in_callee-04.c  strcpy-01.c  struct-01.asm  (+3 more)
test/testcases/: .gitignore  01-memcpy.c  02-memcpy.c  03-memcpy.c  05-memcpy.c  Makefile  fread-01.c  gets-02.c  memcpy-01.c  memcpy-07.c  memcpy-11.c  recv-01.c  sscanf-01.c  system-01.c  system-03.c  test.c
tests/: README.md  __init__.py  test_data.py  test_logic_expr_parsing.py
tests/data/: Makefile
tests/slicing/: __init__.py  conftest.py  test_fixers.py  test_function_calling.py  test_function_out_params.py  test_mangling.py  test_multithreading.py  test_object_oriented.py  test_pointer.py  test_pointer_deref.py  test_polymorphism.py  test_propagators.py  test_serialization.py  (+3 more)
(+74 files in other folders)
