[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mole*"]

[tool.setuptools.package-data]
"mole" = ["conf/*", "resources/*"]

[project]
name = "mole"
version = "0.7.0"
description = "A Binary Ninja plugin to identify interesting paths using static backward slicing"
authors = [
    {name = "Damian Pfammatter"},
    {name = "Sergio Paganoni"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lark==1.3.1",
    "networkx[default]==3.6.1",
    "termcolor==3.3.0",
    "pydantic==2.12.5",
    "openai==2.20.0"
]

[project.optional-dependencies]
develop = [
    "debugpy==1.8.1",
    "pre_commit==4.5.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.14.14",
    "tomli==2.4.0",
]

[project.scripts]
mole = "mole.cli.main:main"

[tool.ruff.lint]
extend-select = ["TID"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]