[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mole"
version = "0.7.2"
description = "A Binary Ninja plugin to identify interesting paths using static backward slicing"
authors = [
    {name = "Damian Pfammatter"},
    {name = "Sergio Paganoni"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "lark==1.3.1",
    "networkx>=3.4.2",
    "termcolor==3.3.0",
    "pydantic==2.12.5",
    "openai==2.43.0"
]

[project.optional-dependencies]
dev = [
    "debugpy==1.8.1",
    "pip-audit==2.10.1",
    "pre-commit==4.5.1",
    "pytest==9.0.3",
    "pytest-cov==7.0.0",
    "ruff==0.14.14",
    "tomli==2.4.0",
]

[project.scripts]
mole = "mole.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mole*"]

[tool.setuptools.package-data]
"mole" = ["conf/*", "resources/*"]

[tool.ruff.lint]
extend-select = ["TID"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
